New name and domain

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ciberachtung",
-  "subdomain": "ciberachtung",
+  "name": "Achtung-JZ13",
+  "subdomain": "achtung",
   "scripts": {
     "start": "node app.js"
   },
